# mrtrix3

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/cmd/: fixelconvert.cpp  shview.cpp
cmake/: exec_version.cpp.in  mrtrix3Config.cmake.in  mrtrix3Config.h.in  mrtrix3Config.install.cmake.in  mrtrix3ConfigVersion.cmake.in  run_tests.in  version.cpp.in
cmd/: fixelcfestats.cpp  fixelconnectivity.cpp  fixelfilter.cpp
core/file/: mmap.cpp  utils.cpp  utils.h
docs/reference/: commands_list.rst
docs/reference/commands/: fixelcfestats.rst  fixelconnectivity.rst  fixelfilter.rst
pkg/: build.sh  meta.yaml
src/: CMakeLists.txt  exec_version.cpp
src/core/: CMakeLists.txt  app.cpp  version.cpp
src/core/connectome/: connectome.h
src/core/file/: path.h
src/core/fixel/legacy/: fixel_image.h
src/core/formats/: mrtrix_sparse_legacy.cpp
src/dwi/: CMakeLists.txt
src/dwi/tractography/SIFT/: output.h  sifter.cpp
src/dwi/tractography/SIFT2/: tckfactor.cpp
src/dwi/tractography/seeding/: dynamic.cpp
src/fixel/: matrix.cpp  matrix.h
src/fixel/filter/: connect.cpp  connect.h  smooth.cpp  smooth.h
src/gui/: CMakeLists.txt
src/gui/icons/: mrview.qrc
src/gui/mrview/tool/fixel/: base_fixel.h
src/gui/mrview/tool/odf/: item.cpp
src/registration/: CMakeLists.txt
src/stats/: CMakeLists.txt  cfe.cpp  cfe.h
testing/: CMakeLists.txt
testing/cmd/: testing_diff_fixel_old.cpp
